--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.lugares.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.example.lugares.ui.lugar.LugarFragment"
+        android:label="@string/menu_lugar"
+        tools:layout="@layout/fragment_lugar" />
 
     <fragment
         android:id="@+id/nav_gallery"
