--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -3,13 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation2"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_lugar">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_lugar"
         android:name="com.example.lugares.ui.lugar.LugarFragment"
         android:label="@string/menu_lugar"
-        tools:layout="@layout/fragment_lugar" />
+        tools:layout="@layout/fragment_lugar" >
+        <action
+            android:id="@+id/action_nav_lugar_to_addLugarFragment"
+            app:destination="@id/addLugarFragment" />
+        <action
+            android:id="@+id/action_nav_lugar_to_addLugar2"
+            app:destination="@id/addLugar2" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -22,4 +29,13 @@
         android:name="com.example.lugares.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/addLugar2"
+        android:name="com.example.lugares.ui.lugar.AddLugar2"
+        android:label="fragment_add_lugar2"
+        tools:layout="@layout/fragment_add_lugar2" >
+        <action
+            android:id="@+id/action_addLugar2_to_nav_lugar"
+            app:destination="@id/nav_lugar" />
+    </fragment>
 </navigation>
